# PI_ContrHorlo

./: CMakeLists.txt  README.md  hw.cpp  hw.h  main.cpp
imageProc/: README.md
imageProc/code/: Makefile
imageProc/code/src/: main.cpp
imageProc/genicam_example/SVCamKit/SVCamMiniExample/Makefile_Linux_g++/: image_1.raw  image_10.raw  image_11.raw  image_12.raw  image_13.raw  image_14.raw  image_15.raw  image_16.raw  image_17.raw  image_18.raw  image_19.raw  image_2.raw  image_20.raw  image_3.raw  image_4.raw  image_5.raw  image_6.raw  image_7.raw  image_8.raw  image_9.raw
imageProc/genicam_example/SVCamKit/SVCapture/lib/: libQt5Svg.so.5  libSVGenSDK64.so.2  libSVLogLinux.so.1
imageProc/no_genicam_example/usr/: Makefile  Quick_Install_Guide  sys_adjust
imageProc/no_genicam_example/usr/console/: Makefile  sv_debayer.cpp  sv_debayer.h  sv_gec.cpp  sv_gec.h  sv_helper.cpp  sv_helper.h  sv_window.cpp  sv_window.h
imageProc/no_genicam_example/usr/example/: Makefile  example  example.cpp
imageProc/no_genicam_example/usr/example_Multicast_Controller/: example.cpp
imageProc/no_genicam_example/usr/example_Multicast_Listner/: example.cpp
imageProc/no_genicam_example/usr/include/: svgige.h
imageProc/utils/: raw_img_show.py
uc/: README.md
uc/code/: .config  CMakeLists.txt  grove_pico_w.h  hw.cpp  hw.h  main.cpp  ui.cpp  ui.h
ui/: README.md  main.py
